Got a handle on the animation transisiton state between index page and about page: entry and exit lengths and delays don't work well together if they are the same link. Fix was making the entry delay the same as the exit length time so they wouldn't overlap

--- a/src/pages/about.module.css
+++ b/src/pages/about.module.css
@@ -25,7 +25,7 @@
 }
 
 .fadeOut {
-  animation: fadeOut ease var(--fade-time);
+  animation: fadeOut ease 0.5s;
 }
 
 .aboutHeader {
